--- a/source/sass/blocks/additional-pruduct-card.scss
+++ b/source/sass/blocks/additional-pruduct-card.scss
@@ -16,7 +16,7 @@
 }
 
 .additional-product-card__label {
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-weight: 400;
 	text-align: left;
 	text-transform: uppercase;
