--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -1,7 +1,7 @@
 .additional__product-list {
 	display: grid;
 	list-style-type: none;
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 18px;
