--- a/source/sass/blocks/extra-form-title.scss
+++ b/source/sass/blocks/extra-form-title.scss
@@ -1,5 +1,5 @@
 .extra-form-title {
-	font-family: "oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-weight: 400;
 	text-align: left;
 	color: rgb(0 0 0);
