--- a/source/sass/blocks/label.scss
+++ b/source/sass/blocks/label.scss
@@ -1,5 +1,5 @@
 .label {
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-weight: 400;
 	text-transform: uppercase;
 	text-align: left;
