--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -37,7 +37,7 @@
 
 .page-form__button {
 	box-sizing: border-box;
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	text-align: center;
 	margin: 0;
 	font-weight: 400;
