--- a/source/sass/blocks/program-goal.scss
+++ b/source/sass/blocks/program-goal.scss
@@ -1,6 +1,6 @@
 .program-goal {
 	display: grid;
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-weight: 400;
 	text-transform: uppercase;
 	text-align: left;
