--- a/source/sass/blocks/promotion.scss
+++ b/source/sass/blocks/promotion.scss
@@ -40,7 +40,7 @@
 }
 
 .promotion__description {
-	font-family: "Lato", sans-serif;
+	font-family: var(--main-font);
 	font-weight: 400;
 	text-align: center;
 	margin: 0;
