--- a/source/sass/blocks/additional-catalog.scss
+++ b/source/sass/blocks/additional-catalog.scss
@@ -33,7 +33,7 @@
 }
 
 .additional-catalog__label {
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-weight: 400;
 	color: rgb(0 0 0);
 	text-align: left;
