--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -33,7 +33,7 @@
 }
 
 .advantages__title {
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-weight: 400;
 	font-size: 36px;
 	line-height: 40px;
