--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,5 +1,5 @@
 .button {
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-weight: 400px;
 	text-transform: uppercase;
 	text-align: center;
