--- a/source/sass/blocks/card-show-more.scss
+++ b/source/sass/blocks/card-show-more.scss
@@ -26,7 +26,7 @@
 	grid-template-rows: min-content;
 	row-gap: 22px;
 	place-items: center;
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 20px;
@@ -80,7 +80,7 @@
 .card-show-more__button {
 	margin-block: 10px;
 	padding: 10px;
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 20px;
