--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,5 +1,5 @@
 .copyright__link {
-	font-family: "Lato", sans-serif;
+	font-family: var(--main-font);
 	color: #444444;
 	text-decoration: none;
 	font-size: 16px;
