--- a/source/sass/blocks/field.scss
+++ b/source/sass/blocks/field.scss
@@ -1,7 +1,7 @@
 .field {
 	background-color: rgb(255 255 255);
 	border: 1px solid rgb(231 231 231 / 1);
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 18px;
