--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,5 +1,5 @@
 .form__title {
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-weight: 400;
 	text-align: left;
 	color: rgb(0 0 0);
@@ -24,7 +24,7 @@
 }
 
 .form__description {
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-weight: 400;
 	text-transform: uppercase;
 	text-align: left;
