--- a/source/sass/blocks/main-container.scss
+++ b/source/sass/blocks/main-container.scss
@@ -1,5 +1,5 @@
 .main-container {
-	font-family: "Lato", sans-serif;
+	font-family: var(--main-font);
 	font-weight: 400;
 	font-size: 14px;
 	line-height: 18px;
