--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -145,7 +145,7 @@
 .main-nav__link {
 	box-sizing: border-box;
 	display: block;
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-size: 20px;
 	font-weight: 500;
 	line-height: 20px;
