--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -31,7 +31,7 @@
 }
 
 .product-card__label {
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-weight: 400;
 
 	text-transform: uppercase;
@@ -88,7 +88,7 @@
 .product-card__description {
 	display: grid;
 	padding-block: 9px;
-	font-family: "Lato", sans-serif;
+	font-family: var(--main-font);
 	font-weight: 400;
 	font-size: 12px;
 	line-height: 16px;
