--- a/source/sass/blocks/field.scss
+++ b/source/sass/blocks/field.scss
@@ -19,7 +19,10 @@
 	@media #{$not-mobile} {
 		padding: 11px 20px;
 		height: 52px;
+		font-size: 20px;
+		line-height: 30px;
 	}
+
 
 	&:hover {
 		box-shadow: inset 0 0 0 1px #cdcdcd;
