--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -17,10 +17,6 @@
 		// padding-block: 65px 54px;
 		padding-inline: 40px 36px;
 	}
-
-	@media #{$desktop-only} {
-		padding-block: 73px 56px;
-	}
 }
 
 .form__description {
@@ -40,7 +36,7 @@
 	}
 
 	@media #{$tablet-only} {
-		margin: 55px 0;
+		margin: 53px 0;
 		padding-left: 40px;
 		width: 323px;
 		font-size: 20px;
@@ -51,5 +47,6 @@
 		font-size: 20px;
 		line-height: 30px;
 		width: 323px;
+		margin-block: 50px 70px;
 	}
 }
